Fix z-index issue on profile page

--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -185,7 +185,7 @@
     font-size: 21px;
     background-color: white;
     position: fixed;
-    z-index: 25;
+    z-index: 8;
     font-weight: bold;
     align-items: center;
 }
